--- a/src/app/portafolio/portafolio.scss
+++ b/src/app/portafolio/portafolio.scss
@@ -1,4 +1,8 @@
 /* From Uiverse.io by codebykay101 */
+*{
+    overflow: hidden;
+}
+
 .container {
     position: relative;
     display: flex;
