--- a/src/app/resume/resume.scss
+++ b/src/app/resume/resume.scss
@@ -11,14 +11,12 @@ $ama3: #4B481B;
     grid-template-rows: repeat(6, 1fr);
     grid-column-gap: 50px;
     grid-row-gap: 10px;
-    padding: 10rem;
+    padding: 5rem;
     color: $ama1;
 }
 
 .div1 {
     grid-area: 1 / 1 / 3 / 2;
-    border-bottom: solid 1px $ama2;
-    // padding: 0;
     align-self: start;
     justify-self: start;
 }
@@ -30,35 +28,30 @@ $ama3: #4B481B;
 
 .div3 {
     grid-area: 2 / 2 / 4 / 3;
-    border-bottom: solid 1px $ama2;
     align-self: start;
     justify-self: start;
 }
 
 .div4 {
     grid-area: 3 / 1 / 5 / 2;
-    border-bottom: solid 1px $ama2;
     align-self: start;
     justify-self: start;
 }
 
 .div5 {
     grid-area: 4 / 2 / 6 / 3;
-    border-bottom: solid 1px $ama2;
     align-self: start;
     justify-self: start;
 }
 
 .div6 {
     grid-area: 5 / 1 / 7 / 2;
-    border-bottom: solid 1px $ama2;
     align-self: start;
     justify-self: start;
 }
 
 .div7 {
     grid-area: 6 / 2 / 7 / 3;
-    border-bottom: solid 1px $ama2;
     align-self: start;
     justify-self: start;
 }
@@ -95,12 +88,20 @@ $ama3: #4B481B;
     align-self: end;
 }
 
-article{
-    align-content: center;
-    h3{
+article {
+    text-align: center;
+    padding: 2rem;
+    background: linear-gradient(#fff2, transparent);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border-radius: 5%;
+    box-shadow: 0 25px 25px rgba(0, 0, 0, 0.25);
+
+    h3 {
         font-weight: 600;
     }
-    img{
+
+    img {
         width: 15rem;
     }
 }
