--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@
 }
 
 .background span {
+    z-index: -1;
     width: 5vmin;
     height: 5vmin;
     border-radius: 5vmin;
